# dezero_4_rust

./: Cargo.toml  README.md
ch01/: Cargo.toml
ch01/src/: avg.rs  bandit.rs  bandit_avg.rs  lib.rs  main.rs  non_stationary.rs
ch04/: Cargo.toml
ch04/src/: dp.rs  dp_inplace.rs
