[package]
name = "ch01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
nalgebra = "0.30.1"
plotters = "0.3.1"
rand = "0.8.5"

[[bin]]
name = "avg"
path = "src/avg.rs"

[[bin]]
name = "bandit"
path = "src/bandit.rs"

[[bin]]
name = "banditavg"
path = "src/bandit_avg.rs"

[[bin]]
name = "nonstat"
path = "src/non_stationary.rs"
